--- a/report/part1.tex
+++ b/report/part1.tex
@@ -16,15 +16,19 @@
 	\centering
 	\caption{By running the Matlab script ResponsetimeAnylsis\_FPP.m with the different parameters given for PU1 and PU2 these response times are obtained. These files are then delivered as PU1.m PU2.m}
 	\begin{tabular}{rrrrr}
+		& & & & \\
 		\toprule
 		PU1     & $T_1$    & $T_2$    & $T_3$    & $T_4$  $(T_s)$ \\
 		\midrule
-		ms      & 0.1     & 2.1     & 4.1     & 7.2 \\
-		&         &         &         &  \\
+		Matlab (ms)      & 0.1     & 2.1     & 4.1     & 7.2 \\
+		Inchron (ms)	& 0.1     & 2.1     & 4.1     & 7.2 \\
+		
+		& & & & \\
 		\toprule
 		PU2     & $T_5$    & $T_6$    & $T_7$    & $T_8$ \\
 		\midrule
-		ms      & 6       & 3       & 9       & 5 \\
+			Matlab (ms)      & 6       & 3       & 9       & 5 \\
+			Inchron (ms)	 & 6       & 3       & 9       & 5 \\
 		
 	\end{tabular}%
 	\label{tab:addlabel}%
