added few stuff

--- a/report/part1.tex
+++ b/report/part1.tex
@@ -51,9 +51,8 @@
 	\label{tab:can-rt}%
 \end{table}%
 
-\section{System model}
-%• System model derivation, design space exploration and controller
-%parameter design
+\input{sysmodel}
+
 
 \section{Design decision}
 %• Your design decision and justification.
