--- a/report/part2.tex
+++ b/report/part2.tex
@@ -134,7 +134,7 @@ PU1 and PU2 are the only units within the system that are sending messages, show
 \section{Optimization for sensor-to-actuator delay}
 %• Optimisation for sensor-to-actuator delay (include troubleshooting)
 
-
+Now optimizing 
 
 \section{System model}
 %• System model derivation, design space exploration and controller
