--- a/report/part1.tex
+++ b/report/part1.tex
@@ -36,6 +36,71 @@ t_{mi}^{k+1}=t_{mi}^{k}
 \label{eq:busy}
 \end{equation}
 
+\subsubsection{ResponseTime}
+If the busy period of the message is less than the period of the message, then the response time of the message is equal to busy period. But if busy period is greater than the period of the message, multiple messages arrive in this instance and response time is computed as the maximum of response times of each individual instances. The number of instances can be computed from equation \ref{eq:inst}. The waiting time and response time of instance $q$ can be computed using equations \ref{eq:wm} and equation \ref{eq:resp} respectively. The initialization and termination conditions for each instance are governed by equations \ref{eq:initw}and \ref{eq:termw} respectively. The total response time can be computed using equation \ref{eq:respfinal}. 
+
+\begin{equation}
+Q_{mi}=\lceil \frac{t_{mi}}{p_{mi}}\rceil
+\label{eq:inst}
+\end{equation}
+
+
+\begin{equation}
+w_{mi}^{k+1}(q)=B_{mi}+qc_{mi}+\sum_{\forall m\epsilon hp(m_i)}\lceil \frac{w_{mi}^k(q)+\tau_bit}{p_{m}}c_m \rceil
+\label{eq:wm}
+\end{equation}
+
+\begin{equation}
+R_{mi}(q)=w_{mi}(q)-qp_{mi}+c_{mi}
+\label{eq:resp}
+\end{equation}
+IniTialization and Termination:
+
+\begin{equation}
+w_{mi}^{0}(q)=B_{mi}+qc_{mi}
+\label{eq:initw}
+\end{equation}
+
+\begin{equation}
+w_{mi}^{k+1}(q)=w_{mi}^{k}(q)
+\label{eq:termw}
+\end{equation}
+
+Total Response time of the message:
+\begin{equation}
+R_{mi}=\max_{q=0toQ_{mi}}(R_{mi}(q)) 
+\label{eq:respfinal}
+\end{equation}
+
+
+\subsection{Fixed-Priority Preemptive}
+Unlike the above case messages or tasks can be preempted in Fixed-Priority preemptive case. The processors PU1 and PU2 employ FPP for their task management. The response time of FPP can be calculated as below.
+\subsubsection{ResponseTime}
+The waiting time and response time of each instance can be calculated from equations \ref{eq:wq} and \ref{eq:rq}. The initialization and termination conditions for each task can be obtained from equations \ref{eq:inw} and \ref{eq:termr}. The response time is nothing but the settling value of the response time.  
+
+
+\begin{equation}
+w_{mi}^{k+1}(q)=w_{mi}^{k}(q)+\sum_{\forall m\epsilon hp(m_i)}\lceil \frac{R_{mi}^k(q)}{p_{m}}c_m \rceil
+\label{eq:wq}
+\end{equation}
+
+\begin{equation}
+R_{mi}(q)=w_{mi}(q)+c_{mi}
+\label{eq:rq}
+\end{equation}
+IniTialization and Termination:
+
+\begin{equation}
+w_{mi}^{0}(q)=0;
+\label{eq:inw}
+\end{equation}
+
+\begin{equation}
+R_{mi}^{k+1}(q)=R_{mi}^{k}(q)
+\label{eq:termr}
+\end{equation}
+
+
 
 $$
 \left(\begin{array}{cccccc} \frac{5405877}{8388608} & \frac{1779554610012637}{4503599627370496} & \frac{2556774576699857}{9007199254740992} & \frac{5958728179101761}{18014398509481984} & \frac{5977866941810759}{18014398509481984} & \frac{7001710681407569}{36028797018963968}\\ \frac{11214311}{16777216} & \frac{7084625639258047}{18014398509481984} & \frac{899773999321853}{2251799813685248} & \frac{957532878607215}{4503599627370496} & \frac{1294028196914907}{4503599627370496} & \frac{1003843680955429}{4503599627370496}\\ \frac{11375297}{16777216} & \frac{3528236130985859}{9007199254740992} & \frac{3692555412596907}{9007199254740992} & \frac{3888470119664915}{18014398509481984} & \frac{3383508192773085}{18014398509481984} & \frac{2502058606778511}{9007199254740992}\\ \frac{5856367}{8388608} & \frac{6947885005335669}{18014398509481984} & \frac{2132562491416857}{9007199254740992} & \frac{4544049740755403}{18014398509481984} & \frac{5357204418747415}{18014398509481984} & \frac{5440699489302825}{18014398509481984}\\ \frac{5938851}{8388608} & \frac{216554524963691}{562949953421312} & \frac{5957049563357563}{18014398509481984} & \frac{5174991199432509}{18014398509481984} & \frac{5125384280540343}{18014398509481984} & \frac{46744069629633}{281474976710656}\\ \frac{12047383}{16777216} & \frac{6746040326951617}{18014398509481984} & \frac{2752455783570947}{9007199254740992} & \frac{4604874733176719}{18014398509481984} & \frac{276421927687887}{1125899906842624} & \frac{4660102307465729}{18014398509481984}\\ \frac{6069923}{8388608} & \frac{3128709595120985}{9007199254740992} & \frac{73140925410559}{281474976710656} & \frac{5683885558178883}{18014398509481984} & \frac{3078209819165599}{9007199254740992} & \frac{2597435085009369}{18014398509481984}\\ \frac{12221983}{16777216} & \frac{6130977755708853}{18014398509481984} & \frac{2672474821560565}{9007199254740992} & \frac{4312055359779939}{18014398509481984} & \frac{704837176307335}{2251799813685248} & \frac{7459631329681823}{36028797018963968}\\ \frac{13176825}{16777216} & \frac{1475295778244567}{4503599627370496} & \frac{2640153546165537}{9007199254740992} & \frac{4594782181353621}{18014398509481984} & \frac{5357084611492291}{18014398509481984} & \frac{5221606366143489}{36028797018963968}\\ \frac{14539945}{16777216} & \frac{2811485811934285}{9007199254740992} & \frac{4353598156785921}{18014398509481984} & \frac{3140917324999235}{18014398509481984} & \frac{4597139977819067}{18014398509481984} & \frac{35680171232155}{140737488355328}\\ \frac{7462981}{8388608} & \frac{1404882563431475}{4503599627370496} & \frac{8572969617428955}{36028797018963968} & \frac{3876596993312093}{18014398509481984} & \frac{8053945777466273}{36028797018963968} & \frac{8269104285396543}{36028797018963968}\\ \frac{15911639}{16777216} & \frac{2749214651185565}{9007199254740992} & \frac{559629131289133}{2251799813685248} & \frac{713659760786817}{4503599627370496} & \frac{8933122415035897}{36028797018963968} & \frac{6919340223277261}{36028797018963968}\\ \frac{8031589}{8388608} & \frac{1337003049143195}{4503599627370496} & \frac{559832169157165}{2251799813685248} & \frac{713110004972929}{4503599627370496} & \frac{8936458530883065}{36028797018963968} & \frac{6919340223277261}{36028797018963968} \end{array}\right)
