--- a/report/part3.tex
+++ b/report/part3.tex
@@ -21,6 +21,46 @@ Now describe the setup for the FlexRay modeling part, Figure \ref{fig:FRdia} sho
 \section{Answer all the questions}
 
 
+\begin{enumerate}
+	\item What is the maximum cycle length possible? 
+	
+	\item What are the maximum possible durations for:
+	
+	\begin{enumerate}
+			\item static slot?
+			
+			\item dynamic slot?
+			
+			\item Network idle time?
+	\end{enumerate}	
+	
+	\item Derive the implicitly defined parameters (e.g., no. of minislots).
+	
+	\item Why do you need idle phase within a dynamic slot?
+	
+	\item Does the above parameters conform to FlexRay specification?
+	
+	\item Answer the above questions in your report Electrical Engineering
+\end{enumerate}
+What is the maximum cycle length possible? 
+
+What are the maximum possible durations for
+
+static slot?
+
+dynamic slot?
+
+Network idle time?
+
+Derive the implicitly defined parameters (e.g., no. of minislots).
+
+Why do you need idle phase within a dynamic slot?
+
+Does the above parameters conform to FlexRay specification?
+
+Answer the above questions in your report Electrical Engineering
+
+
 
 \subsection{Theoretical analysis versus actual implementation}
 %Comment on differences from the theoretical analysis and actual implementation
