--- a/report/part2.tex
+++ b/report/part2.tex
@@ -12,7 +12,7 @@
 %• Very brief introduction of the overall problem setting (< page
 %max)
 
-Analyzing and confirming broad analysis done on paper and in Matlab allows us to confirm the hypothesis made about the behavior of the CAN bus and its specific tasks from Part 1. This analyses is done in Inchron, which allows us to explore the real-time behavior of this embedded system in full detail. Some exploration on how the system should work has already been done in Part 1, \color{red} Add Table reference to periods and priorities \color{black}, this is used here by feeding the settings of the embedded system to the tool. The settings included is the hierarchy of the Processing Units (PUs) and their tasks which each have different periods, execution time and priority. The tree view, Figure \ref{fig:treeCAN}, shows the details of the hierarchy from the Inchron's perspective.
+Analyzing and confirming broad analysis done on paper and in Matlab allows us to confirm the hypothesis made about the behavior of the CAN bus and its specific tasks from Part 1. This analyses is done in Inchron, which allows us to explore the real-time behavior of this embedded system in full detail. Some exploration on how the system should work has already been done in Part 1, this is used here by feeding the settings of the embedded system to the tool. The settings included is the hierarchy of the Processing Units (PUs) and their tasks which each have different periods, execution time and priority. The tree view, Figure \ref{fig:treeCAN}, shows the details of the hierarchy from the Inchron's perspective.
 
 \begin{figure}[h!]
 	\begin{center}
