--- a/report/part3.tex
+++ b/report/part3.tex
@@ -58,7 +58,7 @@ It is very important to note that communication is included in the theoretical a
 \begin{figure}[h!]
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{img/FR-drawing-2}
-		\caption{A sketch of the scheduling showing both ECUs and their connections to according sending or receiving messages}
+		\caption{A sketch of the scheduling showing both ECUs and their connections to according sending or receiving messages.}
 		\label{fig:FRdrawing}
 	\end{center}
 \end{figure}
